add some documentation to clarify this is not actually picoprobe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,33 +2,33 @@ cmake_minimum_required(VERSION 3.12)
 
 include(pico_sdk_import.cmake)
 
-project(picoprobe)
+project(ox64-uart)
 
 pico_sdk_init()
 
-add_executable(picoprobe
+add_executable(ox64-uart
         src/main.c
         src/usb_descriptors.c
         src/cdc_uart.c
         src/get_serial.c
 )
 
-target_compile_options(picoprobe PRIVATE -Wall)
+target_compile_options(ox64-uart PRIVATE -Wall)
 
 if (DEFINED ENV{PICOPROBE_LED})
         message("PICOPROBE_LED is defined as " $ENV{PICOPROBE_LED})
-        target_compile_definitions(picoprobe PRIVATE PICOPROBE_LED=$ENV{PICOPROBE_LED})
+        target_compile_definitions(ox64-uart PRIVATE PICOPROBE_LED=$ENV{PICOPROBE_LED})
 endif()
 
 set(DBG_PIN_COUNT=4)
 
-target_include_directories(picoprobe PRIVATE src)
+target_include_directories(ox64-uart PRIVATE src)
 
-target_compile_definitions (picoprobe PRIVATE
+target_compile_definitions (ox64-uart PRIVATE
 	PICO_RP2040_USB_DEVICE_ENUMERATION_FIX=1
 )
 
-target_link_libraries(picoprobe PRIVATE
+target_link_libraries(ox64-uart PRIVATE
         pico_multicore
         pico_stdlib
         pico_unique_id
@@ -36,6 +36,6 @@ target_link_libraries(picoprobe PRIVATE
         tinyusb_board
 )
 
-pico_set_binary_type(picoprobe copy_to_ram)
+pico_set_binary_type(ox64-uart copy_to_ram)
 
-pico_add_extra_outputs(picoprobe)
+pico_add_extra_outputs(ox64-uart)
